examples/test/testpolicy19423.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy19423
  namespace: namespace185
spec:
  podSelector:
    matchLabels:
      key2: value21
      key15: value12
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key46: value11
      podSelector:
        matchLabels:
          key33: value20
          key3: value20
